Align filter gear item font weight with gear list

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4965,7 +4965,7 @@ body.dark-mode.pink-mode #gearListOutput h2,
 
 #gearListFilterDetails .filter-detail-label {
   font-size: inherit;
-  font-weight: var(--font-weight-medium);
+  font-weight: inherit;
   min-width: 0;
   margin-right: 0;
   line-height: inherit;
