Adjust diagram icon color in bright mode

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3718,6 +3718,8 @@ body.pink-mode #topBar #logo .logo-center {
   font-size: var(--font-size-diagram-icon);
   font-family: 'UiconsThinStraightV2', system-ui, sans-serif;
   font-style: normal;
+  color: var(--accent-color);
+  fill: var(--accent-color);
 }
 #setupDiagram .node-icon[data-icon-font='essential'] {
   font-family: 'EssentialIconsV2', system-ui, sans-serif;
